--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ h1{
 }
 h2{
     font-size: 40px;
-    text-align: left;
 }
 p{
     color: dimgray;
@@ -24,7 +23,7 @@ p{
     text-align: left;
 }
 .half-width img{
-    width: 60%;
+    width: 50%;
 }
 section{
     height: 500px;
@@ -52,15 +51,15 @@ section{
     width: 100%;
 }
 
-.message{
-        background-color: blue;
-        border: 10px solid;
+.Work-Inquiry {
+        background-image: url(images/shapes/Group_33094_1.png);
+        background-size: cover;
         border-radius: 10px;
-        padding: 10px 40px; 
-        margin-left: 100px;
-        margin-right: 100px;
         color: white;
-        font-weight: bold;
-        align-items: center;
-    }
+        margin-right: 20%;
+        margin-left: 20%;
+        text-align: left;
+        padding: 10px;
+}
+
     
